added sculpture images and navigation buttons

--- a/physical.html
+++ b/physical.html
@@ -102,7 +102,7 @@
 			<a href="projects/rosegarden.html" class="card">
 				<img class="card_image" src="assets/rosegarden-cover.jpg"/>
 				<div class="card_title">Rose Garden</div>
-				<div class="card_description">"Wake up and smell the flowers", they say. As someone with the opposite of a green thumb, a headboard representing a rose garden is the closest I'll get</div>
+				<div class="card_description">"Wake up and smell the roses", they say. As someone with the opposite of a green thumb, a headboard representing a rose garden is the closest I'll get</div>
 				<div class="card_tag">Fiber Arts</div>
 			</a>
 			<a href="projects/clouds.html" class="card">
