--- a/projects/appian.html
+++ b/projects/appian.html
@@ -54,52 +54,78 @@
     </div>
     <div id="container_content" style="padding-top: 150px;"></div>
 	<div class="container_content_stack vertical">
-        <div class="card_title">Collaborative Developer Experience</div>
     </br>
         <div class="container_sideBySide"> 
 				<div class="sideBySideItem width_50">
                         <img class="summary_image" src="../assets/appian-1.png"/>
 				</div>
-				<div class="content_text width_50">I led the UX design for a feature that greatly improved Appian developer collaboration in the product -- previously, developers worked in isolation on the platform and relied on third-party tools or in-person communication to stay up-to-date with each others' changes. </br></br>
-                       After countless rounds of user interviews and usability sessions, we shipped Collaborative Packages, which improved communication and visibility within teams in the product</br>
-                        <a href="https://docs.appian.com/suite/help/21.1/Appian_Release_Notes.html#deploy-&-monitor-applications" target="_blank" class="button_secondary">Read the Release Notes  <i class="fas fa-external-link-square-alt"></i></a>
+				<div class="sideBySideItem width_50">
+					<div class="card_title">Collaborative Developer Experience</div></br>
+					<div class="content_text">I led the UX design for a feature that greatly improved Appian developer collaboration in the product -- previously, developers worked in isolation on the platform and relied on third-party tools or in-person communication to stay up-to-date with each others' changes. </br></br>
+					After countless rounds of user interviews and usability sessions, we shipped Collaborative Packages, which improved communication and visibility within teams in the product</br>
+					<a href="https://docs.appian.com/suite/help/21.1/Appian_Release_Notes.html#deploy-&-monitor-applications" target="_blank" class="button_secondary">Read the Release Notes  <i class="fas fa-external-link-square-alt"></i></a>
+					</div>
                     </div>
             </div>
         </br></br>
-            <div class="card_title">Centralized Health Dashboard & Guidance Tools</div>
     </br>
         <div class="container_sideBySide"> 
 				<div class="sideBySideItem width_50">
                         <img class="summary_image" src="../assets/appian-2.png"/>
 				</div>
-                <div class="content_text width_50">I designed the user experience behind a centralized dashboard that would help teams quickly understand the health of their application and easily take action to fix problems. </br></br>
-                    I particularly enjoyed working on a suite of features that guided users at every part of the development process -- from error alerting during coding to providing overall best practice feedback during review.</br>
-                    <a href="https://docs.appian.com/suite/help/20.4/Appian_Release_Notes.html" target="_blank" class="button_secondary">Watch the Release Notes Video  <i class="fas fa-external-link-square-alt"></i></a>
+                <div class="sideBySideItem width_50">
+					<div class="card_title">Centralized Health Dashboard & Guidance Tools</div>
+				</br>
+					<div class="content_text">
+						I designed the user experience behind a centralized dashboard that would help teams quickly understand the health of their application and easily take action to fix problems. </br></br>
+						I particularly enjoyed working on a suite of features that guided users at every part of the development process -- from error alerting during coding to providing overall best practice feedback during review.
+						<a href="https://docs.appian.com/suite/help/20.4/Appian_Release_Notes.html" target="_blank" class="button_secondary">Watch the Release Notes Video  <i class="fas fa-external-link-square-alt"></i></a>
+					</div>
                     </div>
             </div>
         </br></br>
-        <div class="card_title">Streamlined UX and Modern UI for Customers</div>
 </br>
     <div class="container_sideBySide"> 
             <div class="sideBySideItem width_50">
                     <img class="summary_image" src="../assets/appian-cover.png"/>
             </div>
-            <div class="content_text width_50">Outside of working on a platform team, I also collaborated with Customer Success teams on high-priority projects and advocated for best UX practices. Some sites I worked on won "Best UX" awards within the department</br>
+            <div class="sideBySideItem width_50">
+				<div class="card_title">Streamlined UX and Modern UI for Customers</div>
+			</br>
+				<div class="content_text">
+					Outside of working on a platform team, I also collaborated with Customer Success teams on high-priority projects and advocated for best UX practices. Some sites I worked on won "Best UX" awards within the department
+				</div>
                 </div>
         </div>
     </br></br>
-    <div class="card_title">Illustrations built around Inclusivity</div>
 </br>
 <div class="container_sideBySide"> 
         <div class="sideBySideItem width_50">
                 <img class="summary_image" src="../assets/appian-illustrations-cover.png"/>
         </div>
-        <div class="content_text width_50">Illustrations are an industry standard as eye-catching visuals on tech platforms, but they also aid in storytelling and user experience by illustrating potentially complex concepts through a digestible metaphor.</br></br>
-        I started a product illustration initiative to introduce graphics to the platform that not only added visual interest and enhanced user experience, but also promoted diversity and inclusivity - two values that are extremely important to myself and the company.
-            <a href="https://medium.com/appian-engineering/product-illustration-at-appian-6ea1cf02367e" target="_blank" class="button_primary">Read the Medium Article <i class="fas fa-external-link-square-alt"></i></a>
-            <a href="appian-illustrations.html" class="button_secondary">View the Illustrations  <i class="fas fa-arrow-right"></i></a>
+        <div class="sideBySideItem width_50">
+				<div class="card_title">Illustrations built around Inclusivity</div>
+		</br>
+				<div class="content_text">
+						Illustrations are an industry standard as eye-catching visuals on tech platforms, but they also aid in storytelling and user experience by illustrating potentially complex concepts through a digestible metaphor.</br></br>
+						I started a product illustration initiative to introduce graphics to the platform that not only added visual interest and enhanced user experience, but also promoted diversity and inclusivity - two values that are extremely important to myself and the company.
+						<a href="https://medium.com/appian-engineering/product-illustration-at-appian-6ea1cf02367e" target="_blank" class="button_primary">Read the Medium Article <i class="fas fa-external-link-square-alt"></i></a>
+						<a href="appian-illustrations.html" class="button_secondary">View the Illustrations  <i class="fas fa-arrow-right"></i></a>
+				</div>
             </div>
-    </div>
+	</div>
+</br>
+	<div class="border"></div>
+			<div class="container_sideBySide"> 
+					<div class="sideBySideItem width_50">
+					</div>
+					<div class="sideBySideItem_isLast width_50 align_right">
+						<a href="trailhead2.html" class="navigation">
+							<div class="content_text_no_margin">Next Project &nbsp <i class="fas fa-arrow-right"></i></div>
+						</a>
+						<div class="content_text_no_margin">Trailhead 2.0</div>
+					</div>
+				</div>
     </div>
     <div class="footer">
         Regina Yan © 2021
