--- a/projects/candydots.html
+++ b/projects/candydots.html
@@ -55,7 +55,18 @@
 	<div class="container_content_stack vertical">
         <img class="summary_image" src="../assets/candydots-progress2.jpg"/>
         <div class="content_text">This is the "map" I created for crocheting the blanket -- I followed it for the most part until I started running out of colors (and the craft stores started running out of stock), so the final design looks a little different than the map.</div>
-        <img class="summary_image" src="../assets/candydots-progress1.jpg"/>
+		<img class="summary_image" src="../assets/candydots-progress1.jpg"/>
+		<div class="border"></div>
+			<div class="container_sideBySide"> 
+					<div class="sideBySideItem width_50">
+						<a href="clouds.html" class="navigation">
+							<div class="content_text_no_margin"><i class="fas fa-arrow-left"></i>&nbsp Previous Project</i></div>
+						</a>
+						<div class="content_text_no_margin">Clouds</div>
+					</div>
+					<div class="sideBySideItem_isLast width_50 align_right">
+					</div>
+				</div>
     </div>
     <div class="footer">
         Regina Yan © 2021
