--- a/projects/dartmouthdays.html
+++ b/projects/dartmouthdays.html
@@ -135,8 +135,41 @@
                     <div class="sideBySideItem width_50">
                             <img class="summary_image" src="../assets/dartmouth-31.png"/>
                     </div>
+                    <div class="sideBySideItem width_50">
+                            <img class="summary_image" src="../assets/dartmouth-39.png"/>
+                    </div>
+                    <div class="sideBySideItem width_50">
+                            <img class="summary_image" src="../assets/dartmouth-37.png"/>
+                    </div>
+                    <div class="sideBySideItem width_50">
+                            <img class="summary_image" src="../assets/dartmouth-36.png"/>
+                    </div>
+                    <div class="sideBySideItem width_50">
+                            <img class="summary_image" src="../assets/dartmouth-38.png"/>
+                    </div>
+                    <div class="sideBySideItem width_50">
+                            <img class="summary_image" src="../assets/dartmouth-40.png"/>
+                    </div>
+                    <div class="sideBySideItem width_50">
+                            <img class="summary_image" src="../assets/dartmouth-41.png"/>
+                    </div>
                     
                 </div>
+                <div class="border"></div>
+                <div class="container_sideBySide"> 
+                                <div class="sideBySideItem width_50">
+                                        <a href="appian-illustrations-updated.html" class="navigation">
+                                                <div class="content_text_no_margin"><i class="fas fa-arrow-left"></i>&nbsp Previous Project</i></div>
+                                        </a>
+                                        <div class="content_text_no_margin">Appian Illustration Rebrand</div>
+                                </div>
+                                <div class="sideBySideItem_isLast width_50 align_right">
+                                        <a href="doodle2021.html" class="navigation">
+                                                <div class="content_text_no_margin">Next Project &nbsp <i class="fas fa-arrow-right"></i></div>
+                                        </a>
+                                        <div class="content_text_no_margin">A Doodle a Week</div>
+                                </div>
+                        </div>
     </div>
 </div>
 <div class="footer">
