--- a/projects/doc-logos.html
+++ b/projects/doc-logos.html
@@ -100,7 +100,22 @@
                 <div class="sideBySideItem width_50">
                         <img class="summary_image" src="../assets/OPOlogos_final_BW_Ropes Course.png"/>
                 </div>
-        </div>
+		</div>
+		<div class="border"></div>
+			<div class="container_sideBySide"> 
+					<div class="sideBySideItem width_50">
+						<a href="doodle2021.html" class="navigation">
+							<div class="content_text_no_margin"><i class="fas fa-arrow-left"></i>&nbsp Previous Project</i></div>
+						</a>
+						<div class="content_text_no_margin">A Doodle a Week</div>
+					</div>
+					<div class="sideBySideItem_isLast width_50 align_right">
+						<a href="outing-guide.html" class="navigation">
+							<div class="content_text_no_margin">Next Project &nbsp <i class="fas fa-arrow-right"></i></div>
+						</a>
+						<div class="content_text_no_margin">Outing Guide Cover</div>
+					</div>
+				</div>
     </div>
 </div>
 <div class="footer">
