--- a/projects/flow.html
+++ b/projects/flow.html
@@ -57,6 +57,21 @@
 		<img class="summary_image" src="../assets/flow-progress1.jpg"/>
 		<div class="content_text">Close-up of the yarn. I used fluffy sheep's wool to mimic the waves (and also make this project go faster!). The orange and speckled grey yarn fringes ("Rya knot") represent the textured sand.</div>
 		<img class="summary_image" src="../assets/flow-progress2.jpg"/>
+		<div class="border"></div>
+			<div class="container_sideBySide"> 
+					<div class="sideBySideItem width_50">
+						<a href="colorfactory.html" class="navigation">
+							<div class="content_text_no_margin"><i class="fas fa-arrow-left"></i>&nbsp Previous Project</i></div>
+						</a>
+						<div class="content_text_no_margin">Color Factory</div>
+					</div>
+					<div class="sideBySideItem_isLast width_50 align_right">
+						<a href="geode.html" class="navigation">
+							<div class="content_text_no_margin">Next Project &nbsp <i class="fas fa-arrow-right"></i></div>
+						</a>
+						<div class="content_text_no_margin">Geode</div>
+					</div>
+				</div>
     </div>
     <div class="footer">
         Regina Yan © 2021
