--- a/projects/metamuch.html
+++ b/projects/metamuch.html
@@ -55,57 +55,74 @@
     </div>
     <div id="container_content" style="padding-top: 150px;"></div>
 	<div class="container_content_stack vertical">
-        <div class="card_title">Version 1: Basic Site</div>
-			<br/>
         <div class="container_sideBySide"> 
 				<div class="sideBySideItem width_50">
                         <img class="summary_image" src="../assets/reginayanP1.png"/>
 				</div>
-				<div class="content_text width_50">Skills were low and the urgency to have a portfolio for job applications was high. In this bare-bones version, I learned the basics of HTML/CSS and navigating GitHub and placed a selection of work on a single landing page.
+				<div class="sideBySideItem width_50">
+					<div class="card_title">Version 1: Basic Site</div>
+			<br/>
+					<div class="content_text">Skills were low and the urgency to have a portfolio for job applications was high. In this bare-bones version, I learned the basics of HTML/CSS and navigating GitHub and placed a selection of work on a single landing page.</div>
                     </div>
             </div>
         </br></br>
-            <div class="card_title">Version 2: Adding Projects (MVP!)</div>
-			<br/>
         <div class="container_sideBySide"> 
 				<div class="sideBySideItem width_50">
                         <img class="summary_image" src="../assets/reginayanP2.png"/>
 				</div>
-				<div class="content_text width_50">In the second iteration, I added all my project images/documentation and focused on styling. I started incorporating Javascript with components like the nav bar.
+				<div class="sideBySideItem width_50">
+					<div class="card_title">Version 2: Adding Projects (MVP!)</div>
+			<br/>
+					<div class="content_text">In the second iteration, I added all my project images/documentation and focused on styling. I started incorporating Javascript with components like the nav bar.</div>
                     </div>
             </div>
         </br></br>
-        <div class="card_title">Version 3: Responsiveness</div>
         <br/>
         <div class="container_sideBySide"> 
                 <div class="sideBySideItem width_50">
                         <img class="summary_image" src="../assets/reginayanP3.png"/>
                 </div>
-                <div class="content_text width_50">I then focused on responsiveness by learning how to use media queries -- goodbye crammed nav bar items, hello hamburger menu!
+                <div class="sideBySideItem width_50">
+					<div class="card_title">Version 3: Responsiveness</div></br>
+					<div class="content_text">I then focused on responsiveness by learning how to use media queries -- goodbye crammed nav bar items, hello hamburger menu!</div>
                     </div>
             </div>
         </br></br>
-        <div class="card_title">Version 4: Styling Update</div>
     </br>
         <div class="container_sideBySide"> 
                 <div class="sideBySideItem width_50">
                         <img class="summary_image" src="../assets/reginayanP4.png"/>
                 </div>
-                <div class="content_text width_50">With helpful input from friends ("no one wants to see a plain blue screen when they land on your site!"), I added a hero image and changed up the fonts for better style and readability.
+                <div class="sideBySideItem width_50">
+					<div class="card_title">Version 4: Styling Update</div></br>
+					<div class="content_text">With helpful input from friends ("no one wants to see a plain blue screen when they land on your site!"), I added a hero image and changed up the fonts for better style and readability.</div>
                     </div>
             </div>
         </br></br>
-        <div class="card_title">Version 5: UX Improvements</div>
     </br>
         <div class="container_sideBySide"> 
                 <div class="sideBySideItem width_50">
                         <img class="summary_image" src="../assets/reginayanP5.png"/>
                 </div>
-                <div class="content_text width_50">I showed my website to as many people as I could and made improvements based on their feedback. One update I made was the addition of a "More Projects" section at the bottom of each project page -- before, you had to scroll to the top of a page and click back to the main section page in order to navigate to another project. With the "More Projects" section, there's now forward flow!
+                <div class="sideBySideItem width_50">
+					<div class="card_title">Version 5: UX Improvements</div></br>
+					<div class="content_text">I showed my website to as many people as I could and made improvements based on their feedback. One update I made was the addition of a "More Projects" section at the bottom of each project page -- before, you had to scroll to the top of a page and click back to the main section page in order to navigate to another project. With the "More Projects" section, there's now forward flow!</div>
                     </div>
             </div>
         </br></br>
-            <div class="content_text">... and that brings us to today! I'm in the process of design restyling and code restructuring... stay tuned for a site upgrade soon :D  </div>
+			<div class="content_text">... and that brings us to today! I'm in the process of design restyling and code restructuring... stay tuned for a site upgrade soon :D  </div>
+			
+			<div class="border"></div>
+			<div class="container_sideBySide"> 
+					<div class="sideBySideItem width_50">
+						<a href="shesacoder.html" class="navigation">
+							<div class="content_text_no_margin"><i class="fas fa-arrow-left"></i>&nbsp Previous Project</i></div>
+						</a>
+						<div class="content_text_no_margin">Full-Stack Web-Dev</div>
+					</div>
+					<div class="sideBySideItem_isLast width_50 align_right">
+					</div>
+				</div>
 
     </div>
     <div class="footer">
