--- a/projects/phoenix.html
+++ b/projects/phoenix.html
@@ -120,6 +120,21 @@
         </br></br>
         <img class="summary_image" src="../assets/pb-cover.jpg"/>
     </br>
+    <div class="border"></div>
+			<div class="container_sideBySide"> 
+					<div class="sideBySideItem width_50">
+						<a href="trailhead.html" class="navigation">
+							<div class="content_text_no_margin"><i class="fas fa-arrow-left"></i>&nbsp Previous Project</i></div>
+						</a>
+						<div class="content_text_no_margin">Trailhead</div>
+					</div>
+					<div class="sideBySideItem_isLast width_50 align_right">
+						<a href="meexarps.html" class="navigation">
+							<div class="content_text_no_margin">Next Project &nbsp <i class="fas fa-arrow-right"></i></div>
+						</a>
+						<div class="content_text_no_margin">Meexarps</div>
+					</div>
+				</div>
     </div>
     <div class="footer">
         Regina Yan © 2021
