--- a/projects/shesacoder.html
+++ b/projects/shesacoder.html
@@ -53,28 +53,50 @@
     </div>
     <div id="container_content" style="padding-top: 150px;"></div>
 	<div class="container_content_stack vertical">
-        <div class="card_title">Buzzfeed Quiz</div>
     </br>
         <div class="container_sideBySide"> 
 				<div class="sideBySideItem width_50">
                         <img class="summary_image" src="../assets/quizcover-01.png"/>
 				</div>
-				<div class="content_text width_50">For this assignment in my Full-Stack Web Dev class, we were tasked with creating a Javascript Buzzfeed-style quiz</br></br>
-                        I created a quiz that takes the user's inputs and calculates a hex color value. The quiz is framed as a "palette", and the user adds certain amounts of cyan, magenta, and yellow to create their final color mix. The background and option boxes also change color in response to the user's inputs.</br>
-                        <a href="https://dartmouth-cs52-19s.github.io/lab2-regina-yan/" class="button_primary">Try it out  <i class="fas fa-arrow-right"></i></a><a href= "https://github.com/regina-yan/lab2-regina-yan" class="button_secondary">Source Code  <i class="fas fa-arrow-right"></i></a>
+				<div class="sideBySideItem width_50">
+					 <div class="card_title">Buzzfeed Quiz</div></br>
+					<div class="content_text">
+						For this assignment in my Full-Stack Web Dev class, we were tasked with creating a Javascript Buzzfeed-style quiz</br></br>
+						I created a quiz that takes the user's inputs and calculates a hex color value. The quiz is framed as a "palette", and the user adds certain amounts of cyan, magenta, and yellow to create their final color mix. The background and option boxes also change color in response to the user's inputs.</br>
+						<a href="https://dartmouth-cs52-19s.github.io/lab2-regina-yan/" class="button_primary">Try it out  <i class="fas fa-arrow-right"></i></a><a href= "https://github.com/regina-yan/lab2-regina-yan" class="button_secondary">Source Code  <i class="fas fa-arrow-right"></i></a>
+					</div>
                     </div>
             </div>
         </br></br>
-            <div class="card_title">Notes App</div>
     </br>
         <div class="container_sideBySide"> 
 				<div class="sideBySideItem width_50">
                         <img class="summary_image" src="../assets/notescover-02.png"/>
 				</div>
-				<div class="content_text width_50">For this assignment in my Full-Stack Web Dev class, I created a realtime collaborative post-it note app with React and Firebase with standard CRUD features plus the ability to move and change the color of notes.</br>
+				<div class="sideBySideItem width_50">
+					<div class="card_title">Notes App</div>
+				</br>
+					<div class="content_text">
+						For this assignment in my Full-Stack Web Dev class, I created a realtime collaborative post-it note app with React and Firebase with standard CRUD features plus the ability to move and change the color of notes.</br>
                         <a href="http://regina-yan-cs52-lab3.surge.sh/" class="button_primary">Try it out  <i class="fas fa-arrow-right"></i></a><a href="https://github.com/regina-yan/lab3-regina-yan" class="button_secondary">Source Code  <i class="fas fa-arrow-right"></i></a>
+					</div>
                     </div>
 			</div>
+			<div class="border"></div>
+			<div class="container_sideBySide"> 
+					<div class="sideBySideItem width_50">
+						<a href="meexarps.html" class="navigation">
+							<div class="content_text_no_margin"><i class="fas fa-arrow-left"></i>&nbsp Previous Project</i></div>
+						</a>
+						<div class="content_text_no_margin">Meexarps</div>
+					</div>
+					<div class="sideBySideItem_isLast width_50 align_right">
+						<a href="metamuch.html" class="navigation">
+							<div class="content_text_no_margin">Next Project &nbsp <i class="fas fa-arrow-right"></i></div>
+						</a>
+						<div class="content_text_no_margin">Personal Site</div>
+					</div>
+				</div>
     </div>
     <div class="footer">
         Regina Yan © 2021
