--- a/projects/trailhead.html
+++ b/projects/trailhead.html
@@ -89,6 +89,21 @@
 		<div class="image_text">Vehicle Calendar Dialog</div>
 		<img class="summary_image" src="../assets/trailhead-final-3.png"/>
 		<div class="image_text">"Create a Trip" Form</div>
+		<div class="border"></div>
+			<div class="container_sideBySide"> 
+					<div class="sideBySideItem width_50">
+						<a href="trailhead2.html" class="navigation">
+							<div class="content_text_no_margin"><i class="fas fa-arrow-left"></i>&nbsp Previous Project</i></div>
+						</a>
+						<div class="content_text_no_margin">Trailhead 2.0 (makeover!)</div>
+					</div>
+					<div class="sideBySideItem_isLast width_50 align_right">
+						<a href="phoenix.html" class="navigation">
+							<div class="content_text_no_margin">Next Project &nbsp <i class="fas fa-arrow-right"></i></div>
+						</a>
+						<div class="content_text_no_margin">Phoenix Bikes</div>
+					</div>
+				</div>
     </div>
     <div class="footer">
         Regina Yan © 2021
