--- a/projects/tsd.html
+++ b/projects/tsd.html
@@ -55,10 +55,29 @@
     </div>
     <div id="container_content" style="padding-top: 150px;"></div>
 	<div class="container_content_stack vertical">
-            <div class="content_text">I grew up with a background in figure skating, a sport in which one must be outwardly graceful. Roller derby seemed to be the complete opposite of figure skating, and I initially approached this design thinking "brawny! scrappy! muscular!" </br></br> Through collaboration with Slam however, I quickly realized that there's so much grace in the sport, and the logos needed to evoke strength but also feminimity (without feeling too sexualized as roller derby merchandise can often be). It was such a rewarding experience working with these folks, and I'm proud of how the final designs turned out. If you're interested in learning more about Twin State Derby, head over to their site <a href="http://twinstatederby.com/" class="link">here</a>! </div>
-            <img class="summary_image" src="../assets/tsd-logo.png"/>
-            <img class="summary_image" src="../assets/tsd-vixens.png"/>
-            <img class="summary_image" src="../assets/tsd-angelines.jpeg"/>
+			<div class="content_text">I grew up with a background in figure skating, a sport in which one must be outwardly graceful. Roller derby seemed to be the complete opposite of figure skating, and I initially approached this design thinking "brawny! scrappy! muscular!" </br></br> Through collaboration with Slam however, I quickly realized that there's so much grace in the sport, and the logos needed to evoke strength but also feminimity (without feeling too sexualized as roller derby merchandise can often be). It was such a rewarding experience working with these folks, and I'm proud of how the final designs turned out. If you're interested in learning more about Twin State Derby, head over to their site <a href="http://twinstatederby.com/" class="link">here</a>! </div>
+			<div class="container_sideBySide">
+				<div class="sideBySideItem width_50">
+					<img class="summary_image" src="../assets/tsd-logo.png"/>
+				</div>
+				<div class="sideBySideItem width_50">
+					<img class="summary_image" src="../assets/tsd-vixens.png"/>
+				</div>
+				<div class="sideBySideItem width_50">
+				<img class="summary_image" src="../assets/tsd-angelines.jpeg"/>
+				</div>
+			</div>
+			<div class="border"></div>
+			<div class="container_sideBySide"> 
+					<div class="sideBySideItem width_50">
+						<a href="wintercarnival.html" class="navigation">
+							<div class="content_text_no_margin"><i class="fas fa-arrow-left"></i>&nbsp Previous Project</i></div>
+						</a>
+						<div class="content_text_no_margin">Winter Carnival Poster</div>
+					</div>
+					<div class="sideBySideItem_isLast width_50 align_right">
+					</div>
+				</div>
 
     </div>
 </div>
