--- a/projects/wintercarnival.html
+++ b/projects/wintercarnival.html
@@ -55,7 +55,22 @@
     </div>
     <div id="container_content" style="padding-top: 150px;"></div>
 	<div class="container_content_stack vertical">
-            <img class="summary_image" src="../assets/snowwars_final11-01.png"/>
+			<img class="summary_image" src="../assets/snowwars_final11-01.png"/>
+			<div class="border"></div>
+			<div class="container_sideBySide"> 
+					<div class="sideBySideItem width_50">
+						<a href="cookies.html" class="navigation">
+							<div class="content_text_no_margin"><i class="fas fa-arrow-left"></i>&nbsp Previous Project</i></div>
+						</a>
+						<div class="content_text_no_margin">Cookies for KC</div>
+					</div>
+					<div class="sideBySideItem_isLast width_50 align_right">
+						<a href="tsd.html" class="navigation">
+							<div class="content_text_no_margin">Next Project &nbsp <i class="fas fa-arrow-right"></i></div>
+						</a>
+						<div class="content_text_no_margin">Twin State Derby</div>
+					</div>
+				</div>
 
     </div>
 </div>
