--- a/projects/woodsmokemag.html
+++ b/projects/woodsmokemag.html
@@ -61,7 +61,22 @@
         <img class="summary_image" src="../assets/sample1.png"/>
         <img class="summary_image" src="../assets/sample2.png"/>
         <img class="summary_image" src="../assets/sample3.png"/>
-        <img class="summary_image" src="../assets/sample4.png"/>
+		<img class="summary_image" src="../assets/sample4.png"/>
+		<div class="border"></div>
+			<div class="container_sideBySide"> 
+					<div class="sideBySideItem width_50">
+						<a href="outing-guide.html" class="navigation">
+							<div class="content_text_no_margin"><i class="fas fa-arrow-left"></i>&nbsp Previous Project</i></div>
+						</a>
+						<div class="content_text_no_margin">Outing Guide Cover</div>
+					</div>
+					<div class="sideBySideItem_isLast width_50 align_right">
+						<a href="adventure-book.html" class="navigation">
+							<div class="content_text_no_margin">Next Project &nbsp <i class="fas fa-arrow-right"></i></div>
+						</a>
+						<div class="content_text_no_margin">Adventure Book</div>
+					</div>
+				</div>
 
     </div>
 </div>
