--- a/projects/adventure-book.html
+++ b/projects/adventure-book.html
@@ -90,6 +90,21 @@
                         <img class="summary_image" src="../assets/adventure2.png"/>
 				</div>
 			</div>
+			<div class="border"></div>
+			<div class="container_sideBySide"> 
+					<div class="sideBySideItem width_50">
+						<a href="woodsmokemag.html" class="navigation">
+							<div class="content_text_no_margin"><i class="fas fa-arrow-left"></i>&nbsp Previous Project</i></div>
+						</a>
+						<div class="content_text_no_margin">Woodsmoke</div>
+					</div>
+					<div class="sideBySideItem_isLast width_50 align_right">
+						<a href="cookies.html" class="navigation">
+							<div class="content_text_no_margin">Next Project &nbsp <i class="fas fa-arrow-right"></i></div>
+						</a>
+						<div class="content_text_no_margin">Cookies for KC</div>
+					</div>
+				</div>
     </div>
 </div>
 <div class="footer">
