--- a/projects/appian-illustrations.html
+++ b/projects/appian-illustrations.html
@@ -84,6 +84,18 @@
 		<img class="summary_image" src="../assets/apni-6.png"/>
 		<img class="summary_image" src="../assets/apni-7.png"/>
 		<img class="summary_image" src="../assets/apni-8.png"/>
+
+		<div class="border"></div>
+			<div class="container_sideBySide"> 
+					<div class="sideBySideItem width_50">
+					</div>
+					<div class="sideBySideItem_isLast width_50 align_right">
+						<a href="appian-illustrations-updated.html" class="navigation">
+							<div class="content_text_no_margin">Next Project &nbsp <i class="fas fa-arrow-right"></i></div>
+						</a>
+						<div class="content_text_no_margin">The same thing, but REBRANDED</div>
+					</div>
+				</div>
     </div>
 </div>
 <div class="footer">
