--- a/projects/clouds.html
+++ b/projects/clouds.html
@@ -54,7 +54,22 @@
     <div id="container_content" style="padding-top: 150px;"></div>
 	<div class="container_content_stack vertical">
         <img class="summary_image" src="../assets/clouds-progress1.jpg"/>
-        <div class="content_text">A close-up of a cloud (and rain!) </div>
+		<div class="content_text">A close-up of a cloud (and rain!) </div>
+		<div class="border"></div>
+			<div class="container_sideBySide"> 
+					<div class="sideBySideItem width_50">
+						<a href="wedge.html" class="navigation">
+							<div class="content_text_no_margin"><i class="fas fa-arrow-left"></i>&nbsp Previous Project</i></div>
+						</a>
+						<div class="content_text_no_margin">Wedge</div>
+					</div>
+					<div class="sideBySideItem_isLast width_50 align_right">
+						<a href="candydots.html" class="navigation">
+							<div class="content_text_no_margin">Next Project &nbsp <i class="fas fa-arrow-right"></i></div>
+						</a>
+						<div class="content_text_no_margin">Candy Dots</div>
+					</div>
+				</div>
     </div>
     <div class="footer">
         Regina Yan © 2021
