--- a/projects/colorfactory.html
+++ b/projects/colorfactory.html
@@ -68,7 +68,22 @@
         <img class="summary_image" src="../assets/colorfactory-progress5.jpg"/>
         <div class="content_text">Close-up of the whip-stitched border! Oddly satisfying, but very time-consuming (as is this entire project haha!). Happy and proud to be done :)</div>
 		<img class="summary_image" src="../assets/colorfactory-progress6.jpg"/>
-        <img class="summary_image" src="../assets/colorfactory-cover.jpg"/>
+		<img class="summary_image" src="../assets/colorfactory-cover.jpg"/>
+		<div class="border"></div>
+			<div class="container_sideBySide"> 
+					<div class="sideBySideItem width_50">
+						<a href="pilot.html" class="navigation">
+							<div class="content_text_no_margin"><i class="fas fa-arrow-left"></i>&nbsp Previous Project</i></div>
+						</a>
+						<div class="content_text_no_margin">Pilot</div>
+					</div>
+					<div class="sideBySideItem_isLast width_50 align_right">
+						<a href="flow.html" class="navigation">
+							<div class="content_text_no_margin">Next Project &nbsp <i class="fas fa-arrow-right"></i></div>
+						</a>
+						<div class="content_text_no_margin">Flow</div>
+					</div>
+				</div>
     </div>
 </div>
 <div class="footer">
