--- a/projects/cookies.html
+++ b/projects/cookies.html
@@ -74,7 +74,22 @@
                             <img class="summary_image" src="../assets/cookies1.png"/>
                     </div>
                     
-                </div>
+				</div>
+				<div class="border"></div>
+			<div class="container_sideBySide"> 
+					<div class="sideBySideItem width_50">
+						<a href="adventure-book.html" class="navigation">
+							<div class="content_text_no_margin"><i class="fas fa-arrow-left"></i>&nbsp Previous Project</i></div>
+						</a>
+						<div class="content_text_no_margin">Adventure Book</div>
+					</div>
+					<div class="sideBySideItem_isLast width_50 align_right">
+						<a href="wintercarnival.html" class="navigation">
+							<div class="content_text_no_margin">Next Project &nbsp <i class="fas fa-arrow-right"></i></div>
+						</a>
+						<div class="content_text_no_margin">Winter Carnival Poster</div>
+					</div>
+				</div>
 
     </div>
 </div>
