--- a/projects/doodle2021.html
+++ b/projects/doodle2021.html
@@ -224,6 +224,21 @@
 
             
         </div>
+        <div class="border"></div>
+                <div class="container_sideBySide"> 
+                                <div class="sideBySideItem width_50">
+                                        <a href="dartmouthdays.html" class="navigation">
+                                                <div class="content_text_no_margin"><i class="fas fa-arrow-left"></i>&nbsp Previous Project</i></div>
+                                        </a>
+                                        <div class="content_text_no_margin">The Dartmouth Days</div>
+                                </div>
+                                <div class="sideBySideItem_isLast width_50 align_right">
+                                        <a href="doc-logos.html" class="navigation">
+                                                <div class="content_text_no_margin">Next Project &nbsp <i class="fas fa-arrow-right"></i></div>
+                                        </a>
+                                        <div class="content_text_no_margin">DOC Logos</div>
+                                </div>
+                        </div>
     </div>
 </div>
 <div class="footer">
