--- a/projects/geode.html
+++ b/projects/geode.html
@@ -58,7 +58,22 @@
         <div class="content_text">I bought copper tubing from the local hardware store which I bent into an oval frame, and I used an embroidery hoop for the center.</div>
         <img class="summary_image" src="../assets/geode-progress2.jpg"/>
         <div class="content_text">Then came the fun part! I experimented with different yarn thicknesses to mimic texture inside a geode. It doesn't quite look like a geode in the end (we call it our "big red eyeball"), but I think it adds the perfect bit of kookiness to our space.</div>
-        <img class="summary_image" src="../assets/geode-progress3.jpg"/>
+		<img class="summary_image" src="../assets/geode-progress3.jpg"/>
+		<div class="border"></div>
+			<div class="container_sideBySide"> 
+					<div class="sideBySideItem width_50">
+						<a href="flow.html" class="navigation">
+							<div class="content_text_no_margin"><i class="fas fa-arrow-left"></i>&nbsp Previous Project</i></div>
+						</a>
+						<div class="content_text_no_margin">Flow</div>
+					</div>
+					<div class="sideBySideItem_isLast width_50 align_right">
+						<a href="wedge.html" class="navigation">
+							<div class="content_text_no_margin">Next Project &nbsp <i class="fas fa-arrow-right"></i></div>
+						</a>
+						<div class="content_text_no_margin">Wedge</div>
+					</div>
+				</div>
     </div>
     <div class="footer">
         Regina Yan © 2021
