--- a/projects/meexarps.html
+++ b/projects/meexarps.html
@@ -53,6 +53,21 @@
     </div>
     <div id="container_content" style="padding-top: 150px;"></div>
 	<div class="container_content_stack vertical">
+			<div class="border"></div>
+			<div class="container_sideBySide"> 
+					<div class="sideBySideItem width_50">
+						<a href="phoenix.html" class="navigation">
+							<div class="content_text_no_margin"><i class="fas fa-arrow-left"></i>&nbsp Previous Project</i></div>
+						</a>
+						<div class="content_text_no_margin">Phoenix Bikes</div>
+					</div>
+					<div class="sideBySideItem_isLast width_50 align_right">
+						<a href="shesacoder.html" class="navigation">
+							<div class="content_text_no_margin">Next Project &nbsp <i class="fas fa-arrow-right"></i></div>
+						</a>
+						<div class="content_text_no_margin">Full-Stack Web Dev</div>
+					</div>
+				</div>
     </div>
     <div class="footer">
         Regina Yan © 2021
