--- a/projects/metro.html
+++ b/projects/metro.html
@@ -57,7 +57,7 @@
 				<div class="sideBySideItem width_50">
                         <img class="summary_image" src="../assets/metro2.jpg"/>
 				</div>
-				<div class="sideBySideItem width_50">
+				<div class="sideBySideItem_isLast width_50">
                         <img class="summary_image" src="../assets/metro4.jpg"/>
                 </div>
         </div>
@@ -65,7 +65,7 @@
 				<div class="sideBySideItem width_50">
                         <img class="summary_image" src="../assets/metro3.jpg"/>
 				</div>
-				<div class="sideBySideItem width_50">
+				<div class="sideBySideItem_isLast width_50">
                         <img class="summary_image" src="../assets/metro5.jpg"/>
                 </div>
         </div>
@@ -74,10 +74,22 @@
 				<div class="sideBySideItem width_50">
                         <img class="summary_image" src="../assets/metro6.jpg"/>
 				</div>
-				<div class="sideBySideItem width_50">
+				<div class="sideBySideItem_isLast width_50">
                         <img class="summary_image" src="../assets/metro7.jpg"/>
                 </div>
-        </div>
+		</div>
+		<div class="border"></div>
+		<div class="container_sideBySide"> 
+			<div class="sideBySideItem width_50">
+			</div>
+			<div class="sideBySideItem_isLast width_50 align_right">
+				<a href="springtime.html" class="navigation">
+					<div class="content_text_no_margin">Next Project &nbsp <i class="fas fa-arrow-right"></i></div>
+					</a>
+					<div class="content_text_no_margin">Springtime</div>
+			</div>
+		</div>
+		
     </div>
 </div>
 <div class="footer">
