--- a/projects/outing-guide.html
+++ b/projects/outing-guide.html
@@ -55,7 +55,22 @@
     </div>
     <div id="container_content" style="padding-top: 150px;"></div>
 	<div class="container_content_stack vertical">
-        <img class="summary_image" src="../assets/dog_after.png"/>
+		<img class="summary_image" src="../assets/dog_after.png"/>
+		<div class="border"></div>
+			<div class="container_sideBySide"> 
+					<div class="sideBySideItem width_50">
+						<a href="doc-logos.html" class="navigation">
+							<div class="content_text_no_margin"><i class="fas fa-arrow-left"></i>&nbsp Previous Project</i></div>
+						</a>
+						<div class="content_text_no_margin">DOC Logos</div>
+					</div>
+					<div class="sideBySideItem_isLast width_50 align_right">
+						<a href="woodsmokemag.html" class="navigation">
+							<div class="content_text_no_margin">Next Project &nbsp <i class="fas fa-arrow-right"></i></div>
+						</a>
+						<div class="content_text_no_margin">Woodsmoke</div>
+					</div>
+				</div>
 
     </div>
 </div>
