--- a/projects/pilot.html
+++ b/projects/pilot.html
@@ -64,6 +64,21 @@
                         <img class="summary_image" src="../assets/pilot-progress3.jpg"/>
 				</div>
 			</div>
+			<div class="border"></div>
+			<div class="container_sideBySide"> 
+					<div class="sideBySideItem width_50">
+						<a href="climbingwall.html" class="navigation">
+							<div class="content_text_no_margin"><i class="fas fa-arrow-left"></i>&nbsp Previous Project</i></div>
+						</a>
+						<div class="content_text_no_margin">Climbing Wall</div>
+					</div>
+					<div class="sideBySideItem_isLast width_50 align_right">
+						<a href="colorfactory.html" class="navigation">
+							<div class="content_text_no_margin">Next Project &nbsp <i class="fas fa-arrow-right"></i></div>
+						</a>
+						<div class="content_text_no_margin">Color Factory</div>
+					</div>
+				</div>
 	</div>
 </div>
 	<div class="footer">
