--- a/projects/rosegarden.html
+++ b/projects/rosegarden.html
@@ -60,7 +60,22 @@
         <div class="content_text">The weaving process is always messy! Here you can see some of the crocheted bobbles I made to represent flower bulbs</div>
         <img class="summary_image" src="../assets/rosegarden-progress2.jpg"/>
         <div class="content_text">Close-up of the finished product</div>
-        <img class="summary_image" src="../assets/rosegarden-progress3.jpg"/>
+		<img class="summary_image" src="../assets/rosegarden-progress3.jpg"/>
+		<div class="border"></div>
+			<div class="container_sideBySide"> 
+					<div class="sideBySideItem width_50">
+						<a href="wedge.html" class="navigation">
+							<div class="content_text_no_margin"><i class="fas fa-arrow-left"></i>&nbsp Previous Project</i></div>
+						</a>
+						<div class="content_text_no_margin">Wedge</div>
+					</div>
+					<div class="sideBySideItem_isLast width_50 align_right">
+						<a href="clouds.html" class="navigation">
+							<div class="content_text_no_margin">Next Project &nbsp <i class="fas fa-arrow-right"></i></div>
+						</a>
+						<div class="content_text_no_margin">Clouds</div>
+					</div>
+				</div>
     </div>
     <div class="footer">
         Regina Yan © 2021
