--- a/projects/springtime.html
+++ b/projects/springtime.html
@@ -61,7 +61,24 @@
         <img class="summary_image" src="../assets/stool-3.jpg"/>
 		<div class="content_text">Top view of the stool</div>
 		<img class="summary_image" src="../assets/stool-2.jpg"/>
-    </div>
+		<div class="border"></div>
+		
+		<div class="container_sideBySide"> 
+			<div class="sideBySideItem width_50">
+				<a href="metro.html" class="navigation">
+					<div class="content_text_no_margin"><i class="fas fa-arrow-left"></i>&nbsp Previous Project</i></div>
+				</a>
+				<div class="content_text_no_margin">Ode to Metro</div>
+			</div>
+			<div class="sideBySideItem_isLast width_50 align_right">
+				<a href="climbingwall.html" class="navigation">
+					<div class="content_text_no_margin">Next Project &nbsp <i class="fas fa-arrow-right"></i></div>
+				</a>
+				<div class="content_text_no_margin">Climbing Wall</div>
+			</div>
+		</div>
+	</div>
+
 </div>
 <div class="footer">
         Regina Yan © 2021
