--- a/projects/trailhead2.html
+++ b/projects/trailhead2.html
@@ -90,7 +90,21 @@
         <img class="summary_image shadow" src="../assets/trailhead22.png"/>
         <div class="image_text">Create Trip Page</div>
 		<br>
-		
+		<div class="border"></div>
+			<div class="container_sideBySide"> 
+					<div class="sideBySideItem width_50">
+						<a href="appian.html" class="navigation">
+							<div class="content_text_no_margin"><i class="fas fa-arrow-left"></i>&nbsp Previous Project</i></div>
+						</a>
+						<div class="content_text_no_margin">Appian</div>
+					</div>
+					<div class="sideBySideItem_isLast width_50 align_right">
+						<a href="trailhead.html" class="navigation">
+							<div class="content_text_no_margin">Next Project &nbsp <i class="fas fa-arrow-right"></i></div>
+						</a>
+						<div class="content_text_no_margin">Trailhead (before this redesign)</div>
+					</div>
+				</div>
     </div>
     <div class="footer">
         Regina Yan © 2021
