--- a/projects/wedge.html
+++ b/projects/wedge.html
@@ -69,6 +69,21 @@
                         <img class="summary_image" src="../assets/wedge-progress6.jpg"/>
 				</div>
 			</div>
+			<div class="border"></div>
+			<div class="container_sideBySide"> 
+					<div class="sideBySideItem width_50">
+						<a href="geode.html" class="navigation">
+							<div class="content_text_no_margin"><i class="fas fa-arrow-left"></i>&nbsp Previous Project</i></div>
+						</a>
+						<div class="content_text_no_margin">Geode</div>
+					</div>
+					<div class="sideBySideItem_isLast width_50 align_right">
+						<a href="rosegarden.html" class="navigation">
+							<div class="content_text_no_margin">Next Project &nbsp <i class="fas fa-arrow-right"></i></div>
+						</a>
+						<div class="content_text_no_margin">Rose Garden</div>
+					</div>
+				</div>
     </div>
     <div class="footer">
         Regina Yan © 2021
