added viva raw project

--- a/illustration.html
+++ b/illustration.html
@@ -69,6 +69,12 @@
 				<div class="card_description">A series of illustrations that reflect on the four most formative years of my life</div>
 				<div class="card_tag">Series</div>
 			</a>
+			<a href="projects/viva.html" class="card">
+				<img class="card_image" src="assets/vivaraw-cover.png"/>
+				<div class="card_title">Viva Raw</div>
+				<div class="card_description"> Packaging design and branding for a healthy, fresh raw pet food company</div>
+				<div class="card_tag">Branding</div>
+			</a>
 			<a href="projects/doodle2021.html" class="card">
 				<img class="card_image" src="assets/doodle-cover.png"/>
 				<div class="card_title">A Doodle a Week</div>
