--- a/projects/dartmouthdays.html
+++ b/projects/dartmouthdays.html
@@ -164,10 +164,10 @@
                                         <div class="content_text_no_margin">Appian Illustration Rebrand</div>
                                 </div>
                                 <div class="sideBySideItem_isLast width_50 align_right">
-                                        <a href="doodle2021.html" class="navigation">
+                                        <a href="viva.html" class="navigation">
                                                 <div class="content_text_no_margin">Next Project &nbsp <i class="fas fa-arrow-right"></i></div>
                                         </a>
-                                        <div class="content_text_no_margin">A Doodle a Week</div>
+                                        <div class="content_text_no_margin">Viva Raw</div>
                                 </div>
                         </div>
     </div>
