updated viva photos

--- a/illustration.html
+++ b/illustration.html
@@ -70,7 +70,7 @@
 				<div class="card_tag">Series</div>
 			</a>
 			<a href="projects/viva.html" class="card">
-				<img class="card_image" src="assets/vivaraw-cover.png"/>
+				<img class="card_image" src="assets/viva-basket.png"/>
 				<div class="card_title">Viva Raw</div>
 				<div class="card_description"> Packaging design and branding for a healthy, fresh raw pet food company</div>
 				<div class="card_tag">Branding</div>
