--- a/projects/phoenix.html
+++ b/projects/phoenix.html
@@ -46,7 +46,9 @@
 			<div class="summary_description"> 
                     CreateAthon is a 24-hour creative marathon event where teams help local DC non-profits with design and brand strategy. I participated in 2021 as a UX Designer and was part of a fantastic team with Kate, Gary, Toni-Lee, Jasper, and Dawn. We worked with with Phoenix Bikes, a community bike shop that runs youth education programs to teach kids how to build and maintain bikes (and they get to keep the bike at the end!)
             </br></br>
-            Read on to see how we managed to restructure, redesign and implement an entire new site on Wordpress, uplift the mission through a complete content overhaul, and liven the brand with a new logo and youthful colors and icons... all in 24 hours!
+			Read on to see how we managed to restructure, redesign and implement an entire new site on Wordpress, uplift the mission through a complete content overhaul, and liven the brand with a new logo and youthful colors and icons... all in 24 hours!
+		</br>
+			<a href="https://www.phoenixbikes.org/" target="_blank" class="button_secondary">Check out the site  <i class="fas fa-external-link-square-alt"></i></a>
 			</div>
 			<a href="#container_content"><button class="button_circle_arrow" >
 				<i class="fas fa-arrow-down"></i>			
