--- a/projects/viva.html
+++ b/projects/viva.html
@@ -37,7 +37,7 @@
 	<div class="container_summary">
 		<div class="section_summary">
 			<div class="caption_container">
-				<img class="summary_image" src="../assets/viva-render.png"/>
+				<img class="summary_image" src="../assets/viva-basket.png"/>
 			</div>
 		</div>
 		<div class="section_summary_text">
@@ -88,6 +88,14 @@
 		<img class="summary_image" src="../assets/viva-complete-combined.png"/>
 		<div class="image_text">Final designs for the Complete (additional ingredients) product line</div>
 		<img class="summary_image" src="../assets/viva-doodle-grey.png"/>
+		<div class="container_sideBySide"> 
+			<div class="sideBySideItem width_50">
+				<img class="summary_image" src="../assets/viva-prof2.png"/>
+			</div>
+			<div class="sideBySideItem width_50">
+				<img class="summary_image" src="../assets/viva-prof1.png"/>
+			</div>
+		</div>
 		<img class="summary_image" src="../assets/viva.gif"/>
 
 		<div class="border"></div>
