still under construction lol

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 			<div class="category_subtitle halfwidth">
 				A designer and engineer with a passion for the outdoors and human-centered design
 			</br></br>
-				This site is under construction during fall 2021 (devs, there are bugs! UXDs, shield your eyes!) but write-ups will be written and code will be coded soon!
+				This site is under construction during winter/spring 2022 (devs, there are bugs! UXDs, shield your eyes!) but write-ups will be written and code will be coded soon!
 			</div>
 		</div>
 	</div>
