adding east coast greenway trip

--- a/misc.html
+++ b/misc.html
@@ -40,12 +40,12 @@
 				<div class="category_title">Adventures</div>
 			</div>
 		<div class="container_cards">
-				<div class="card">
-						<img class="card_image" src="assets/southafrica-cover.png"/>
-						<div class="card_title">Coming Soon!</div>
-						<div class="card_description">Trip Videos, musings about life, thoughts on outdoors accessibility... it's all on the backlog!</div>
-						
-					</div>
+					<a href="projects/ecg.html" class="card">
+						<img class="card_image" src="assets/ecg-cover.png"/>
+						<div class="card_title">Biking the East Coast Greenway</div>
+						<div class="card_description">What do you get when you mix a month-long vacation opportunity with a budding cyclist going through a quarter-life crisis? A solo bikepacking trip down the East Coast!</div>
+						<div class="card_tag">Biking</div>
+					</a>
 		</div>
 		<!-- <div class="container_cards">
 			<div class="card">
