adding south africa climbing trip

--- a/projects/ecg.html
+++ b/projects/ecg.html
@@ -299,7 +299,7 @@
 
             <div class="card_title">What I Brought</div>
             <div class="content_text">
-                    Here's a list of things I brought. A few things I chose to not bring: A camping stove (because I was eating gas station snacks and grocery store food), Bug spray (took up too much space although would have been nice in Georgia), Rain pants (it was warm enough in September/October that my legs didn't get too cold in the rain), and a camera (again, too much space. Also I don't have a camera).
+                    Here's a list of things I brought. A few things I chose to not bring: A camping stove (because I was eating gas station snacks and grocery store food), Bug spray (took up too much space although would have been nice in Georgia), a camera (again, too much space. Also I don't have a camera)and Rain pants (it was warm enough in September/October that my legs didn't get too cold in the rain).
                     <div class="container_sideBySide"> 
                         <div class="sideBySideItem width_50">
                                 <table class="single-table">
@@ -450,6 +450,9 @@
                                         <tr>
                                             <td>Sunscreen</td>
                                         </tr>
+                                        <tr>
+                                            <td>Small bike lock (nothing sturdy, just enough to give me peace of mind when running into a grocery store)</td>
+                                        </tr>
                                     </tbody>
                                 </table>
 
@@ -498,21 +501,18 @@
             </div>
 
 		<br>
-		<!-- <div class="border"></div>
+		<div class="border"></div>
 			<div class="container_sideBySide"> 
 					<div class="sideBySideItem width_50">
-						<a href="appian.html" class="navigation">
-							<div class="content_text_no_margin"><i class="fas fa-arrow-left"></i>&nbsp Previous Project</i></div>
-						</a>
-						<div class="content_text_no_margin">Appian</div>
+						
 					</div>
 					<div class="sideBySideItem_isLast width_50 align_right">
-						<a href="trailhead.html" class="navigation">
-							<div class="content_text_no_margin">Next Project &nbsp <i class="fas fa-arrow-right"></i></div>
+						<a href="southafrica.html" class="navigation">
+							<div class="content_text_no_margin">Next Adventure &nbsp <i class="fas fa-arrow-right"></i></div>
 						</a>
-						<div class="content_text_no_margin">Trailhead (before this redesign)</div>
+						<div class="content_text_no_margin">South Africa Climbing Trip</div>
 					</div>
-				</div> -->
+				</div>
     </div>
 </div>
 </div>
