--- a/misc.html
+++ b/misc.html
@@ -46,6 +46,12 @@
 						<div class="card_description">What do you get when you mix a month-long vacation opportunity with a budding cyclist going through a quarter-life crisis? A solo bikepacking trip down the East Coast!</div>
 						<div class="card_tag">Biking</div>
 					</a>
+					<a href="projects/southafrica.html" class="card">
+						<img class="card_image" src="assets/southafrica-card-cover.png"/>
+						<div class="card_title">South Africa Climbing Trip</div>
+						<div class="card_description">What started out as a college-sponsored climbing trip ended up being a lesson in recognizing our own privilege and biases as Americans travelling through another beautiful yet complex, divided country</div>
+						<div class="card_tag">Climbing</div>
+					</a>
 		</div>
 		<!-- <div class="container_cards">
 			<div class="card">
